test: make numeric map ref tests Java 8 compatible